fix align of form labels

--- a/static/css/guia_frontend.css
+++ b/static/css/guia_frontend.css
@@ -597,3 +597,7 @@ display: inline-block;
 .slick-current {
   opacity: 1;
 }
+
+.fix-align-form label {
+    min-height: 44px;
+}
